--- a/Exercícios/ex022/fundo002.html
+++ b/Exercícios/ex022/fundo002.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Repetição de imagens de background</title>
+    <style>
+        body {
+            background-image: url(imagens/pattern002.png);
+            background-repeat: no-repeat;
+            background-size: 500px;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Teste de aplicação de fundo</h1>
 </body>
 </html>
