--- a/Exercícios/ex022/fundo004.html
+++ b/Exercícios/ex022/fundo004.html
@@ -7,7 +7,12 @@
     <title>posicionamento</title>
     <style>
         body {
-            background-image: url('gustavoguanabara.github.io/html-css/imagens/mascote.png');
+            height: 100vh;
+            border: 1px dashed black;
+            background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');
+            background-size: 100px;
+            background-repeat: no-repeat;
+            background-position: left center;
         }
     </style>
 </head>
