--- a/Exercícios/ex022/fundo005.html
+++ b/Exercícios/ex022/fundo005.html
@@ -8,10 +8,17 @@
     <style>
         body {
             height: 100vh;
-            background-image: url(imagens/wallpaper002.jpg);
+            /*background-image: url(imagens/wallpaper002.jpg);
             background-color: black;
             background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed; */
+
+            /*Shorthand Backgorund 
+            colo > image > position > repeat > size > attachment*/
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
 
@@ -28,6 +35,9 @@
 <body>
     <main>
         <h1>Teste de Imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae temporibus quis rerum molestias, facere cum excepturi beatae, commodi fugit sint architecto dignissimos officiis! Magni aperiam dolores delectus inventore, fugiat soluta!Lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam placeat sint cupiditate assumenda! Officia sapiente repellendus dolores inventore ab error dolor eos dignissimos minus cumque? Quos aspernatur fugiat consectetur necessitatibus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, ut iste! Repudiandae minus necessitatibus ipsum maxime dicta dolorum nihil quidem id exercitationem non, facilis totam veniam fuga ducimus sequi? Odit?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae temporibus quis rerum molestias, facere cum excepturi beatae, commodi fugit sint architecto dignissimos officiis! Magni aperiam dolores delectus inventore, fugiat soluta!Lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam placeat sint cupiditate assumenda! Officia sapiente repellendus dolores inventore ab error dolor eos dignissimos minus cumque? Quos aspernatur fugiat consectetur necessitatibus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, ut iste! Repudiandae minus necessitatibus ipsum maxime dicta dolorum nihil quidem id exercitationem non, facilis totam veniam fuga ducimus sequi? Odit?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae temporibus quis rerum molestias, facere cum excepturi beatae, commodi fugit sint architecto dignissimos officiis! Magni aperiam dolores delectus inventore, fugiat soluta!Lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam placeat sint cupiditate assumenda! Officia sapiente repellendus dolores inventore ab error dolor eos dignissimos minus cumque? Quos aspernatur fugiat consectetur necessitatibus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, ut iste! Repudiandae minus necessitatibus ipsum maxime dicta dolorum nihil quidem id exercitationem non, facilis totam veniam fuga ducimus sequi? Odit?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae temporibus quis rerum molestias, facere cum excepturi beatae, commodi fugit sint architecto dignissimos officiis! Magni aperiam dolores delectus inventore, fugiat soluta!Lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam placeat sint cupiditate assumenda! Officia sapiente repellendus dolores inventore ab error dolor eos dignissimos minus cumque? Quos aspernatur fugiat consectetur necessitatibus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, ut iste! Repudiandae minus necessitatibus ipsum maxime dicta dolorum nihil quidem id exercitationem non, facilis totam veniam fuga ducimus sequi? Odit?</p>
     </main>
 </body>
